--- a/src/ui/requestbuilder.ui
+++ b/src/ui/requestbuilder.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>511</width>
-    <height>831</height>
+    <height>855</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -195,7 +195,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QTableView" name="tableView">
+          <widget class="QTableView" name="tableView_headers">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -205,7 +205,16 @@
            <property name="sizeAdjustPolicy">
             <enum>QAbstractScrollArea::AdjustToContents</enum>
            </property>
+           <property name="showGrid">
+            <bool>true</bool>
+           </property>
            <attribute name="horizontalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="horizontalHeaderStretchLastSection">
+            <bool>true</bool>
+           </attribute>
+           <attribute name="verticalHeaderVisible">
             <bool>false</bool>
            </attribute>
           </widget>
@@ -229,14 +238,14 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QPushButton" name="pushButton_2">
+             <widget class="QPushButton" name="pushButton_addHeader">
               <property name="text">
                <string>+</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_3">
+             <widget class="QPushButton" name="pushButton_removeHeader">
               <property name="text">
                <string>-</string>
               </property>
